Fix ClassNames, colors in CSS, correct position in board (no overlaping or outside)

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
-  background-color: rgb(46, 100, 100);
+  background-color: rgb(82, 82, 82);
   margin: 0;
+  color:#ccc
 }
 
 
 .grid-container {
-  background-color: rgb(36, 77, 139);
+  background-color: rgba(0, 0, 0, 0.363);
   display: flex;
   justify-content: space-between;
   margin-top: 100px;
@@ -19,21 +20,6 @@ body {
   background-color: rgb(156, 189, 9);
 }
 
-.map-grid {
-  display: grid;
-  grid-template-columns: repeat(
-    10,
-    30px
-  ); 
-  grid-template-rows: repeat(
-    10,
-    30px
-  ); 
-  gap: 2px; 
-  width: 300px; 
-  height: 300px; 
-  border: 1px solid #000; 
-}
 
 .board {
   display: grid;
@@ -74,3 +60,34 @@ body {
 .selected-ship{
   background-color: rgb(189, 37, 219);
 }
+
+
+
+.Carrier {
+  background-color: #FF5733;
+
+}
+
+.Battleship {
+  background-color: #3498db;
+
+}
+
+.Cruiser {
+  background-color: #2ecc71;
+
+}
+
+.Submarine {
+  background-color: #f39c12;
+
+}
+
+.Destroyer {
+  background-color: #e74c3c;
+
+}
+
+
+
+
